--- a/login/login.html
+++ b/login/login.html
@@ -10,7 +10,7 @@
 <body>
     <div class="auth-container">
         <div class="auth-header">
-            <img src="https://media.discordapp.net/attachments/1381802062186287255/1383584492517593321/descarga_1.png" alt="Logo">
+            <img src="https://media.discordapp.net/attachments/1381802062186287255/1383584492517593321/descarga_1.png" alt="Logo Blokara Studios">
             <h1>BLOKARA STUDIOS</h1>
         </div>
 
@@ -23,45 +23,66 @@
         <form id="login-form" class="auth-form active">
             <div class="form-group">
                 <label for="login-email"><i class="fas fa-envelope"></i> Correo Electrónico</label>
-                <input type="email" id="login-email" required>
+                <input type="email" id="login-email" required placeholder="tucorreo@ejemplo.com">
             </div>
             <div class="form-group">
                 <label for="login-password"><i class="fas fa-lock"></i> Contraseña</label>
-                <input type="password" id="login-password" required>
+                <input type="password" id="login-password" required placeholder="••••••••">
+                <div class="show-password">
+                    <input type="checkbox" id="show-login-password">
+                    <label for="show-login-password">Mostrar contraseña</label>
+                </div>
             </div>
-            <button type="submit" class="auth-btn">Ingresar</button>
+            <button type="submit" class="auth-btn" id="login-btn">
+                <i class="fas fa-sign-in-alt"></i> Ingresar
+            </button>
+            <div class="auth-footer">
+                <a href="../seguridad/soporte.html" class="forgot-password">¿Olvidaste tu contraseña?</a>
+            </div>
         </form>
 
         <!-- Formulario de Registro -->
         <form id="register-form" class="auth-form">
             <div class="form-group">
                 <label for="register-name"><i class="fas fa-user"></i> Nombre Completo</label>
-                <input type="text" id="register-name" required>
+                <input type="text" id="register-name" required placeholder="Tu nombre completo">
             </div>
             <div class="form-group">
                 <label for="register-email"><i class="fas fa-envelope"></i> Correo Electrónico</label>
-                <input type="email" id="register-email" required>
+                <input type="email" id="register-email" required placeholder="tucorreo@ejemplo.com">
             </div>
             <div class="form-group">
                 <label for="register-password"><i class="fas fa-lock"></i> Contraseña</label>
-                <input type="password" id="register-password" required>
+                <input type="password" id="register-password" required placeholder="••••••••">
                 <div class="password-strength">
+                    <span class="strength-bar"></span>
                     <span class="strength-bar"></span>
                     <span class="strength-bar"></span>
                     <span class="strength-bar"></span>
                     <span class="strength-text"></span>
                 </div>
+                <div class="password-requirements">
+                    <p>La contraseña debe contener:</p>
+                    <ul>
+                        <li id="req-length">Mínimo 8 caracteres</li>
+                        <li id="req-uppercase">Al menos una mayúscula</li>
+                        <li id="req-number">Al menos un número</li>
+                        <li id="req-special">Al menos un carácter especial</li>
+                    </ul>
+                </div>
+                <div class="show-password">
+                    <input type="checkbox" id="show-register-password">
+                    <label for="show-register-password">Mostrar contraseña</label>
+                </div>
             </div>
             <div class="form-group">
                 <label for="register-confirm"><i class="fas fa-lock"></i> Confirmar Contraseña</label>
-                <input type="password" id="register-confirm" required>
+                <input type="password" id="register-confirm" required placeholder="••••••••">
             </div>
-            <button type="submit" class="auth-btn">Registrarse</button>
+            <button type="submit" class="auth-btn" id="register-btn">
+                <i class="fas fa-user-plus"></i> Registrarse
+            </button>
         </form>
-
-        <div class="auth-footer">
-            <p>¿Problemas para ingresar? <a href="../seguridad/soporte.html">Contacta al soporte</a></p>
-        </div>
     </div>
 
     <script src="../login/login.js"></script>
